Showing alarm time at alarm switch

--- a/config.rb.dist
+++ b/config.rb.dist
@@ -3,7 +3,7 @@ require 'logger'
 module PiAlarmclock
   module Config
     @values = {      
-      :alarm_time   => (6 * 60 + 15) * 60,						# Seconds after midnight... for now
+      :alarm_time   => {:hour => 6, :min => 15 },
       :sunrise_duration => 30 * 60,                             # Seconds	  
       :pidfile             => '/var/run/alarmclock/alarmclock.pid',
       :logfile             => '/var/log/alarmclock/alarmclock.log',
